<resources>
    <string name="app_name">Путеводитель НСК</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="select">Выбор редакции</string>
    <string name="map">Всё на карте</string>
    <string name="favourites">Избранное</string>
    <string name="title_activity_maps">Посмотреть на карте</string>

    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="gps_disabled">GPS отключено. Включить GPS?</string>
    <string name="location_permission_granted">Доступ к геолокации получен.</string>
    <string name="location_permission_denied">Геолокация запрещена. Отказано в доступе.</string>
    <string name="wait_message">Подождите, определяется местонахождение</string>
    <string name="gps_turned_off">GPS выключено</string>
    <string name="dinner">Где поесть</string>
    <string name="hotel">Где остановиться</string>
    <string name="to_see">Чем заняться</string>
    <string name="cinema">Кинотеатры</string>
    <string name="shopping">Шоппинг</string>
    <string name="theatre">Театры</string>
    <string name="museum">Музеи</string>
    <string name="interest">Интересные места</string>
    <string name="entertainment">Развлечения</string>

    <string name="cd_image">IMAGE</string>
    <string name="cd_phone">PHONE</string>
    <string name="cd_remove">REMOVE</string>
    <string name="title_activity_route">Проложить маршрут</string>
    <string name="route">Проложить маршрут</string>

    <string name="done">Готово</string>
    <string name="skip">Пропустить</string>

</resources>
