<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_ask_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@color/colorTransparent"
        android:text="@string/gps_disabled"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ok"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>