<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/dinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/charcoal"
        android:onClick="onClick"
        android:padding="@dimen/base_padding">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerInParent="true"
            android:src="@drawable/image_dinner_shafran"
            app:civ_border_color="@color/dark_gray"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:text="@string/dinner"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/hotel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/dark_gray"
        android:onClick="onClick"
        android:padding="@dimen/base_padding">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerInParent="true"
            android:src="@drawable/image_hotel_guestcourt"
            app:civ_border_color="@color/charcoal"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:shadowColor="@color/maroon"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:text="@string/hotel"
            android:textColor="@color/free_speech_red"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/to_see"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/charcoal"
        android:onClick="onClick"
        android:padding="@dimen/base_padding">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerInParent="true"
            android:src="@drawable/image_theatre_operaballey"
            app:civ_border_color="@color/dark_gray"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:text="@string/to_see"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>

